fixed small layout issues

--- a/src/components/navigation/MainNavigation/style.scss
+++ b/src/components/navigation/MainNavigation/style.scss
@@ -7,8 +7,8 @@
   padding-bottom: 8px;
 
   @include media-breakpoint-only(xl) {
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
 }
 
